changed guides format

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
            <!-- Newsletter signup start -->
           <div class="lu-newletter">
-            <h2><a href="https://docs.google.com/forms/d/1tCYf0KppjsyyRblBtDRDkbXH0tgC_LCND73fmBL_tYo/viewform">Subscribe for contest reminders and updates</a></h2>
+            <h2><a href="signup.html">Signup Guide</a></h2>
               </div>
           </div>
           <!-- Newsletter signup end -->
@@ -98,7 +98,7 @@
                     <i class="fa fa-users"></i>
                   </div>
                   <h3><a href="http://theta360.guide/contest/signup.html">Sign Up</a></h3>
-                  <div class="lu-new-feature-text"><a href="http://contest.theta360.com/index-en.html">Free to enter</a>.
+                  <div class="lu-new-feature-text">
                     Chance to win $45,000* in total prize money. Learn from your
                     peers in the forum.
                     </div>
@@ -153,6 +153,7 @@
       <div class="container text-center">
         <div class="row">
           <h3>Featured Guides and News</h3>
+          <a href="signup_cloudapi.html"> Cloud API Signup Guide</a>
           <br>
           <a href="http://theta360.guide/community-document/uvc-theta.html">
             THETA Live Streaming Setup and Test Guide
