updated guide logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <!-- Logo start -->
           <div class="lu-logo">
-            <img src="img/developer_logo.png">
+            <href="/"><img src="img/developer_logo.png"></a>
           </div>
           <!-- Logo End -->
 
