updated guide logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <!-- Logo start -->
           <div class="lu-logo">
-            <href="/"><img src="img/developer_logo.png"></a>
+            <a href="/"><img src="img/developer_logo.png"></a>
           </div>
           <!-- Logo End -->
 
