updated guide logo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
            <!-- Newsletter signup start -->
           <div class="lu-newletter">
-            <h2><a href="signup.html">Signup Guide</a></h2>
+            <h2><a href="https://docs.google.com/forms/d/1tCYf0KppjsyyRblBtDRDkbXH0tgC_LCND73fmBL_tYo/viewform">Signup for Contest News and Updates</a></h2>
               </div>
           </div>
           <!-- Newsletter signup end -->
