--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -40,6 +40,8 @@
 <li>Finally, you'll get to the download link. There's some Japanese text and a clear document icon and link. It's just a small text file with your RICOH Cloud API (beta version) credentials.</li>
 <p><img src="img/api_keys.png" border="1"></p>
 <li>You should be good to go!</li>
+<li>You will get TWO things back: "client_id" and client_secret." These TWO things make up your API key. 
+<p><img src="img/clientid_clientsecret.png" border="1"></p>
 <li>We have gotten a few errors through the credentials page. If you see the following, you're running into the same problems we had when we tried to login too quickly. Remember, the emails say you have to wait 30 minutes!</li>
 <ul>
   <li>エラー 404  HTTP Web Server: 例外 - Lotus Notes の例外 - エントリが索引に見つかりません</li>
