--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -49,6 +49,12 @@
 </ul>
 </ol>
 
+<h3>Important</h3>
+To call the API, you'll need the RICOH Cloud API (beta version) credentials ("client_id" and client_secret," which you just got above) and you'll need login in info from the Unified Communications System webpage (which you'll get below, and is easier than getting client_id and client_secret).
+
+As you load and setup up your SDK modules, you'll run into this. You'll need both!
+<p><img src="img/api_userid.png" border="1"></p>
+
 <h3  style="font-family:verdana;">Managing Your RICOH Cloud API (beta version)</h3>
 <p  style="font-family:verdana;">This section is currently incomplete. (April 26, 2016) We've logged in and created our accounts, but we're not activitely managing our API keys yet. We've included a few initial screenshots, but we intend to be back with more information soon.</p>
 <img src="img/Unified_signup.png" border="1">
