--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -49,7 +49,7 @@
 </ul>
 </ol>
 
-<h3>Important</h3>
+<h3 style="font-family:verdana;">Important</h3>
 To call the API, you'll need the RICOH Cloud API (beta version) credentials ("client_id" and client_secret," which you just got above) and you'll need login in info from the Unified Communications System webpage (which you'll get below, and is easier than getting client_id and client_secret).
 
 As you load and setup up your SDK modules, you'll run into this. You'll need both!
