changed contest signup information link to lists

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-users"></i>
                   </div>
-                  <h3><a href="http://theta360.guide/contest/signup.html">Sign Up</a></h3>
+                  <h3><a href="http://lists.theta360.guide/t/how-to-sign-up-for-the-ricoh-theta-x-iot-developers-contest/74?u=craig">Sign Up</a></h3>
                   <div class="lu-new-feature-text">
                     Chance to win $45,000* in total prize money. Learn from your
                     peers in the forum.
