updated site content

--- a/index.html
+++ b/index.html
@@ -49,27 +49,18 @@
 
           <div class="countdown California time">
             <h2>Must register by Wed, August 10, 7:59am, California time</h2>
-            <h2>Must submit your app or gadget by Wed, August 31, 7:59am, California time</h2>
+          <!--  <h2>Must submit your app or gadget by Wed, August 31, 7:59am, California time</h2> -->
           </div>
 
            <!-- Newsletter signup start -->
           <div class="lu-newletter">
-            <h2><a href="https://docs.google.com/forms/d/1tCYf0KppjsyyRblBtDRDkbXH0tgC_LCND73fmBL_tYo/viewform">Signup for Contest News and Updates</a></h2>
+            <h2><a href="https://docs.google.com/forms/d/1tCYf0KppjsyyRblBtDRDkbXH0tgC_LCND73fmBL_tYo/viewform">Subscribe to News</a> |
+              <a href="http://lists.theta360.guide/t/how-to-sign-up-for-the-ricoh-theta-x-iot-developers-contest/74?u=codetricity"> Signup Info</a> |
+              <a href="http://lists.theta360.guide/t/ricoh-theta-developer-contest-faq/73?u=codetricity">FAQ</a>
+              </h2>
               </div>
           </div>
           <!-- Newsletter signup end -->
-
-          <!-- Social networks
-            <div class="lu-social-networks text-center">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
-              <a href="#"><i class="fa fa-pinterest"></i></a>
-              <a href="#"><i class="fa fa-dribbble"></i></a>
-              <a href="#"><i class="fa fa-google-plus"></i></a>
-            </div>
-           Social networks -->
-
 
         </div><!--.col-md-12-->
       </div><!--.row-->
@@ -86,10 +77,11 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-cubes"></i>
                   </div>
-                  <h3>Overview</h3>
-                  <div class="lu-new-feature-text"><a href="http://codetricity.github.io/theta-s/index.html">
-                    Develop</a> your cool application for the <a href="https://theta360.com/en/">
-                      RICOH THETA</a> 360 camera. Connect to sensors, data, and gadgets. </div>
+                  <h3><a href="http://lists.theta360.guide/c/contest?order=views">TIPS</a></h3>
+                  <div class="lu-new-feature-text">
+                    <a href="http://lists.theta360.guide/c/contest?order=views">
+                    Examples and articles</a> to help you come up with your cool application idea.
+                    <a href="http://codetricity.github.io/theta-s/index.html">API Guide for Newbies</a> </div>
               </div>
             </div>
             <div class="col-md-4">
@@ -97,10 +89,12 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-users"></i>
                   </div>
-                  <h3><a href="http://lists.theta360.guide/t/how-to-sign-up-for-the-ricoh-theta-x-iot-developers-contest/74?u=craig">Sign Up</a></h3>
+                  <h3><a href="http://lists.theta360.guide/">Community</a></h3>
                   <div class="lu-new-feature-text">
-                    Chance to win $45,000* in total prize money. Learn from your
-                    peers in the forum.
+                    Ask questions about the
+                    <a href="http://lists.theta360.guide/c/theta-api-usage">API</a>,
+                    <a href="http://lists.theta360.guide/c/theta-media?order=views">360 media</a> including
+                    <a href="http://lists.theta360.guide/t/theta-live-streaming-on-youtube/13?u=codetricity">live streaming</a>. Get answers. :-)
                     </div>
               </div>
             </div>
@@ -109,43 +103,15 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-fire"></i>
                   </div>
-                  <h3>Tips to Win</h3>
-                  <div class="lu-new-feature-text">Check out the
-                    <a href="http://theta360.guide/">"
-                    Unofficial Guides for RICOH THETA Developers </a> includes
-                    <a href="http://codetricity.github.io/theta-s/index.html">API Guide</a>,
-                    <a href="http://theta360.guide/community-document/community.html">Media Guide</a>, and
-                    <a href="http://theta360.guide/blog/">Blog</a>.
+                  <h3>Newsletter Archive</h3>
+                  <div class="lu-new-feature-text">
+                    <a href="http://us11.campaign-archive2.com/?u=92f3f97f3eb55d52507b08fe1&id=d928fa4517">
+                    Issue #2: June </a> <br>
+                    <a href="http://us11.campaign-archive2.com/?u=92f3f97f3eb55d52507b08fe1&id=821a2f0694">Issue #1: May</a>
+
                   </div>
               </div>
             </div>
-            <!-- <div class="col-md-4">
-              <div class="lu-new-feature">
-                  <div class="lu-new-feature-icon">
-                    <i class="fa fa-film"></i>
-                  </div>
-                  <h3>Video Background</h3>
-                  <div class="lu-new-feature-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</div>
-              </div>
-            </div> -->
-            <!-- <div class="col-md-4">
-              <div class="lu-new-feature">
-                  <div class="lu-new-feature-icon">
-                    <i class="fa fa-cubes"></i>
-                  </div>
-                  <h3>Slider Background</h3>
-                  <div class="lu-new-feature-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</div>
-              </div>
-            </div> -->
-            <!-- <div class="col-md-4">
-              <div class="lu-new-feature">
-                  <div class="lu-new-feature-icon">
-                    <i class="fa fa-envelope"></i>
-                  </div>
-                  <h3>Mailchimp Support</h3>
-                  <div class="lu-new-feature-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</div>
-              </div>
-            </div> -->
           </div>
       </div>
     </section>
