--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- What's new coming section -->
     <section class="lu-what-new">
       <div class="container text-center">
-          <h1 class="lu-section-title">Key Information</h1>
+          <!-- <h1 class="lu-section-title">Key Information</h1> -->
 
           <div class="row">
             <div class="col-md-4">
