--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                   </div>
                   <h3>Newsletter Archive</h3>
                   <div class="lu-new-feature-text">
+                    <a href="http://eepurl.com/b7cPBD">
+                      Issue #3: Late June</a></br>
                     <a href="http://us11.campaign-archive2.com/?u=92f3f97f3eb55d52507b08fe1&id=d928fa4517">
                     Issue #2: June </a> <br>
                     <a href="http://us11.campaign-archive2.com/?u=92f3f97f3eb55d52507b08fe1&id=821a2f0694">Issue #1: May</a>
