added 2015 developer contest showcase

--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
               <br>
             <a href="http://lists.theta360.guide/t/list-of-theta-apps/48?u=codetricity">
               List of THETA Apps</a>
+              <br>
+            <a href="http://lists.theta360.guide/t/2015-theta-developer-contest-winners/55?u=codetricity">
+              2015 THETA Developer Contest Winner Showcase</a>
+
         </div>
       </div>
     </section>
