changed signup form

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
            <!-- Newsletter signup start -->
           <div class="lu-newletter">
-            <h2><a href="https://docs.google.com/forms/d/1tCYf0KppjsyyRblBtDRDkbXH0tgC_LCND73fmBL_tYo/viewform">Subscribe to News</a> |
-              <a href="http://lists.theta360.guide/t/how-to-sign-up-for-the-ricoh-theta-x-iot-developers-contest/74?u=codetricity"> Signup Info</a> |
-              <a href="http://lists.theta360.guide/t/ricoh-theta-developer-contest-faq/73?u=codetricity">FAQ</a>
+            <h2><a href="http://eepurl.com/b3k2Lj">Subscribe to News</a>
+
+
               </h2>
               </div>
           </div>
@@ -79,9 +79,11 @@
                   </div>
                   <h3><a href="http://lists.theta360.guide/c/contest?order=views">TIPS</a></h3>
                   <div class="lu-new-feature-text">
+                          <a href="http://lists.theta360.guide/t/ricoh-theta-developer-contest-faq/73?u=codetricity">FAQ</a><br>
+                      <a href="http://lists.theta360.guide/t/how-to-sign-up-for-the-ricoh-theta-x-iot-developers-contest/74?u=codetricity"> Signup Tips</a></br>
                     <a href="http://lists.theta360.guide/c/contest?order=views">
-                    Examples and articles</a> to help you come up with your cool application idea.
-                    <a href="http://codetricity.github.io/theta-s/index.html">API Guide for Newbies</a> </div>
+                    Examples and articles</a>
+                  </div>
               </div>
             </div>
             <div class="col-md-4">
