updated community section

--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
                   </div>
                   <h3><a href="http://lists.theta360.guide/">Community</a></h3>
                   <div class="lu-new-feature-text">
-                    Ask questions about the
-                    <a href="http://lists.theta360.guide/c/theta-api-usage">API</a>,
-                    <a href="http://lists.theta360.guide/c/theta-media?order=views">360 media</a> including
-                    <a href="http://lists.theta360.guide/t/theta-live-streaming-on-youtube/13?u=codetricity">live streaming</a>. Get answers. :-)
+                    <a href="http://lists.theta360.guide/c/theta-api-usage">API</a> <br>
+                    <a href="http://lists.theta360.guide/c/theta-media?order=views">360 media</a><br>
+                    <a href="http://lists.theta360.guide/t/theta-live-streaming-on-youtube/13?u=codetricity">YouTube live streaming</a>
                     </div>
               </div>
             </div>
