added cloud API presentation

--- a/index.html
+++ b/index.html
@@ -77,12 +77,11 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-cubes"></i>
                   </div>
-                  <h3><a href="http://lists.theta360.guide/c/contest?order=views">TIPS</a></h3>
+                  <h3>TIPS</h3>
                   <div class="lu-new-feature-text">
                           <a href="http://lists.theta360.guide/t/ricoh-theta-developer-contest-faq/73?u=codetricity">FAQ</a><br>
                       <a href="http://lists.theta360.guide/t/how-to-sign-up-for-the-ricoh-theta-x-iot-developers-contest/74?u=codetricity"> Signup Tips</a></br>
-                    <a href="http://lists.theta360.guide/c/contest?order=views">
-                    Examples and articles</a>
+                      <a href="http://lists.theta360.guide/t/ricoh-cloud-api-video-presentation-for-theta-in-english-first-seminar/97">Cloud API for THETA Video Presentation</a>
                   </div>
               </div>
             </div>
@@ -95,7 +94,7 @@
                   <div class="lu-new-feature-text">
                     <a href="http://lists.theta360.guide/c/theta-api-usage">API</a> <br>
                     <a href="http://lists.theta360.guide/c/theta-media?order=views">360 media</a><br>
-                    <a href="http://lists.theta360.guide/t/theta-live-streaming-on-youtube/13?u=codetricity">YouTube live streaming</a>
+                    <a href="http://lists.theta360.guide/c/contest?order=views">Contest</a>
                     </div>
               </div>
             </div>
@@ -147,6 +146,9 @@
               <br>
             <a href="http://lists.theta360.guide/t/2015-theta-developer-contest-winners/55?u=codetricity">
               2015 THETA Developer Contest Winner Showcase</a>
+              <br>
+            <a href="http://lists.theta360.guide/t/ricoh-cloud-api-seminar-2-slides/94">
+              RICOH Cloud API (for THETA) Seminar 2 Presentation Slides</a>
 
         </div>
       </div>
