added mini-guide on API over USB

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
               <br>
             <a href="http://lists.theta360.guide/t/ricoh-cloud-api-seminar-2-slides/94">
               RICOH Cloud API (for THETA) Seminar 2 Presentation Slides</a>
+              <br>
+            <a href="http://codetricity.github.io/theta-s/usb.html">
+              Using the THETA API Over USB</a>
 
         </div>
       </div>
