added newsletter issue #5

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                   </div>
                   <h3>Newsletter Archive</h3>
                   <div class="lu-new-feature-text">
+                    <a href="http://lists.theta360.guide/t/theta-x-iot-developers-contest-upcoming-deadlines-and-contest-details/121">
+                      Issue #5: Late July</a></br>
                     <a href="http://us11.campaign-archive2.com/?u=92f3f97f3eb55d52507b08fe1&id=d04268cc4a">
                       Issue #4: Early July</a><br>
                     <a href="http://eepurl.com/b7cPBD">
