--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <!-- countdown end -->
 
           <div class="countdown California time">
-            <h2>Must submit your app or gadget by Wed, Aug 31, 7:59am, California time</h2>
+            <h2>Registration period ended Aug 10. You must submit your app or gadget by Wed, Aug 31, 7:59am, California time</h2>
           <!--  <h2>Must submit your app or gadget by Wed, August 31, 7:59am, California time</h2> -->
           </div>
 
