--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <header class="lavel-up-header lavel-up-header-bg-img" data-stellar-background-ratio="0.5">
+    <header data-stellar-background-ratio="0.5">
       <div class="lavel-up-color-overlay">
         <div class="container text-center">
 
