--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+<center>
+  <img src="img/thank_you.png"
+</center>
     <header class="lavel-up-header lavel-up-header-bg-img" data-stellar-background-ratio="0.5">
       <div class="lavel-up-color-overlay">
         <div class="container text-center">
