--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <center>
   <img src="img/thank_you.png"
 </center>
-
+<h3>Registrations and app submissions have closed. Please look back here for information on the winners!</h3>
 
     <!-- What's new coming section -->
     <section class="lu-what-new">
