update on results announcement

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <center>
   <img src="img/thank_you.png"
 </center>
-<h3>Registrations and app submissions have closed. Please look back here for information on the winners!</h3>
+<h3>Registrations and app submissions have closed. The results will be announced on Mon, November 7, 2016 at the awards ceremony in Tokyo. Good luck to eveyone who submitted!
+Video of the seminars
+Please look back here for information on the winners!</h3>
 
     <!-- What's new coming section -->
     <section class="lu-what-new">
