--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <center>
   <img src="img/thank_you.png"
 </center>
-<h3>Registrations and app submissions have closed. The results will be announced on Mon, November 7, 2016 at the awards ceremony in Tokyo. Good luck to eveyone who submitted!</h3>
+<h3>Registrations and app submissions have closed. The results will be announced on Mon, November 7, 2016 at the awards ceremony in Tokyo. Good luck to everyone who submitted!</h3>
 
     <!-- What's new coming section -->
     <section class="lu-what-new">
