--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <img src="img/thank_you.png"
 </center>
 <h3>Registrations and app submissions have closed. The results have been announced! More info <a href="http://lists.theta360.guide/t/developers-contest-winners-announced/589?u=jcasman">here</a>.</h3>
-<h3>Note to those who utilized the RICOH Cloud API (beta version). It can be used until March 31st, 2017.  RICOH has stated, "We plan to release a new service that will replace RICOH Cloud API (beta version).
+<h3>Note to those who utilized the RICOH Cloud API (beta version). It's available through March 31st, 2017. Beyond that, RICOH has stated, "We plan to release a new service that will replace RICOH Cloud API (beta version).
   Please look forward to the announcement."</h3>
     <!-- What's new coming section -->
     <section class="lu-what-new">
